added table hover highlighting; added New Driver/Customer/Order buttons; Renamed and moved Max orders to the top;

--- a/templates/dash.html
+++ b/templates/dash.html
@@ -92,10 +92,10 @@
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Timespan</h6>
+                        <a class="collapse-item" href="/dash/orders/">All</a>
                         <a class="collapse-item" href="#">Last 30 days</a>
                         <a class="collapse-item" href="#">Last 6 months</a>
                         <a class="collapse-item" href="#">Last year</a>
-                        <a class="collapse-item" href="/dash/orders/">Max</a>
                     </div>
                 </div>
             </li>
