--- a/templates/dash.html
+++ b/templates/dash.html
@@ -32,7 +32,7 @@
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="#">
+            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/dash/">
                 <div class="sidebar-brand-icon rotate-n-15">
                     <i class="fas fa-truck-monster"></i>
                 </div>
@@ -66,38 +66,17 @@
 
             <!-- Nav Item - Utilities Collapse Menu -->
             <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
-                    aria-expanded="true" aria-controls="collapseUtilities">
+                <a class="nav-link" href="/dash/customers/">
                     <i class="fas fa-fw fa-wrench"></i>
                     <span>Customers</span>
                 </a>
-                <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
-                    data-parent="#accordionSidebar">
-                    <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Filter by</h6>
-                        <a class="collapse-item" href="/dash/customers/">All</a>
-                        <a class="collapse-item" href="/dash/shippers/">Shippers</a>
-                        <a class="collapse-item" href="/dash/brokers/">Brokers</a>
-                    </div>
-                </div>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseOrders"
-                    aria-expanded="true" aria-controls="collapseOrders">
+                <a class="nav-link" href="/dash/orders/">
                     <i class="fas fa-fw fa-wrench"></i>
                     <span>Orders</span>
                 </a>
-                <div id="collapseOrders" class="collapse" aria-labelledby="headingOrders"
-                    data-parent="#accordionSidebar">
-                    <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Timespan</h6>
-                        <a class="collapse-item" href="/dash/orders/">All</a>
-                        <a class="collapse-item" href="#">Last 30 days</a>
-                        <a class="collapse-item" href="#">Last 6 months</a>
-                        <a class="collapse-item" href="#">Last year</a>
-                    </div>
-                </div>
             </li>
             <!-- Divider -->
             <hr class="sidebar-divider">
