--- a/templates/main.html
+++ b/templates/main.html
@@ -1,4 +1,5 @@
 {% extends "templates/dash.html" %}
+{% load static %}
 
 {% block content %}
 
@@ -337,4 +338,15 @@
     </div>
 
 </div>
+
+{% endblock %}
+
+
+{% block scripts %}
+<!-- Page level plugins -->
+<script src="{% static 'vendor/chart.js/Chart.min.js' %}"></script>
+
+<!-- Page level custom scripts -->
+<script src="{% static 'js/demo/chart-area-demo.js' %}"></script>
+<script src="{% static 'js/demo/chart-pie-demo.js' %}"></script>
 {% endblock %}
