--- a/templates/orders.html
+++ b/templates/orders.html
@@ -21,8 +21,10 @@
                         <th>Driver</th>
                         <th>Origin</th>
                         <th>Destination</th>
-                        <th>PU</th>
-                        <th>DO</th>
+                        <th>Pick up date</th>
+                        <th>Deliver date</th>
+                        <th>Miles</th>
+                        <th>Gross</th>
                         <th>gRate</th>
                     </tr>
                 </thead>
@@ -32,8 +34,10 @@
                         <th>Driver</th>
                         <th>Origin</th>
                         <th>Destination</th>
-                        <th>PU</th>
-                        <th>DO</th>
+                        <th>Pick up date</th>
+                        <th>Deliver date</th>
+                        <th>Miles</th>
+                        <th>Gross</th>
                         <th>gRate</th>
                     </tr>
                 </tfoot>
@@ -41,11 +45,13 @@
                     {% for order in orders %}
                     <tr>
                         <td>{{ order.customer.companyName }}</td>
-                        <td>{{ order.driver.firstName }}</td>
-                        <td>{{ order.originState }}</td>
-                        <td>{{ order.destinationState }}</td>
-                        <td>{{ order.pickupDate }}</td>
-                        <td>{{ order.deliveryDate  }}</td>
+                        <td>{{ order.driver.firstName }} {{order.driver.lastName}}</td>
+                        <td>{{order.originCity}}, {{ order.originState }}</td>
+                        <td>{{order.destinationCity}}, {{ order.destinationState }}</td>
+                        <td>{{ order.pickupDate | date:"n/j h:i" }}</td>
+                        <td>{{ order.deliveryDate | date:"n/j h:i"  }}</td>
+                        <td>{{ order.mileage }}</td>
+                        <td>{{ order.gross }}</td>
                         <td>{{ order.gRate }}</td>
                     </tr>
                     {% endfor %}
@@ -56,4 +62,3 @@
 </div>
 
 {% endblock %}
-
