crud working for all models; deletion catches Restricted exception; I still need messages framework

--- a/templates/drivers.html
+++ b/templates/drivers.html
@@ -25,6 +25,7 @@
                         <th>Address</th>
                         <th>CDL</th>
                         <th>&gamma; rate</th>
+                        <th># orders</th>
                         <th>Options</th>
                     </tr>
                 </thead>
@@ -38,6 +39,7 @@
                         <td>{{ driver.city }}, {{ driver.state}}</td>
                         <td>{{ driver.cdl }}</td>
                         <td>{{ driver.gRate}}</td>
+                        <td>{{ driver.orders.count }}</td>
                         <td>
                             <a class='btn btn-info btn-sm' href="/dash/drivers/{{driver.pk}}/">View</a>
                         </td>
