--- a/templates/customers.html
+++ b/templates/customers.html
@@ -27,9 +27,9 @@
                 <tbody>
                     {% for customer in customers %}
                     <tr>
-                        <td>{{ customer.companyName }}</td>
+                        <td>{{ customer }}</td>
                         <td>{{ customer.mc }}</td>
-                        <td>{{ customer.zipCode }} {{ customer.address}}, {{ customer.city }}, {{customer.state}}</td>
+                        <td>{{ customer.full_address }}</td>
                         <td>61</td>
                         <td>
                             <a class='btn btn-info btn-sm' href="/dash/customers/{{customer.pk}}/">View</a>
