--- a/templates/delete.html
+++ b/templates/delete.html
@@ -12,7 +12,7 @@
       </div>
       <!-- Card Body -->
       <div class="card-body">
-          Are you sure you want to delete {{ userName}}? You will have to delete all associated orders first.
+          Are you sure you want to delete {{ object_name}}? You will have to delete all associated orders first.
 
         <div class='row justify-content-center'>
         <div>
