--- a/templates/details.html
+++ b/templates/details.html
@@ -19,7 +19,7 @@
                   <div class="d-flex flex-column align-items-center text-center">
                     <img src="{% static 'img/undraw_profile.svg' %}" alt="Admin" class="rounded-circle" width="150">
                     <div class="mt-3">
-                      <h4 class="font-weight-bold text-gray-800">{{ userName }}</h4>
+                      <h4 class="font-weight-bold text-gray-800">{{ user }}</h4>
 
                       <p class="text-secondary mb-1">Full Stack Developer</p>
                       <p class="text-muted font-size-sm">{{user.zip}} {{user.address}}, {{user.city}}, {{user.state}}</p>
@@ -220,12 +220,12 @@
                 <tbody>
                     {% for order in orders %}
                     <tr>
-                        <td>{{ order.customer.companyName }}</td>
-                        <td>{{ order.driver.firstName }} {{order.driver.lastName}}</td>
-                        <td>{{order.originCity}}, {{ order.originState }}</td>
-                        <td>{{order.destinationCity}}, {{ order.destinationState }}</td>
-                        <td>{{ order.pickupDate | date:"n/j h:i" }}</td>
-                        <td>{{ order.deliveryDate | date:"n/j h:i"  }}</td>
+                        <td>{{ order.broker }}</td>
+                        <td>{{ order.driver}}</td>
+                        <td>{{order.origin_city}}, {{ order.origin_state }}</td>
+                        <td>{{order.destination_city}}, {{ order.destination_state }}</td>
+                        <td>{{ order.pickup_date | date:"n/j h:i" }}</td>
+                        <td>{{ order.delivery_date | date:"n/j h:i"  }}</td>
                         <td>{{ order.mileage }}</td>
                         <td>{{ order.gross }}</td>
                         <td>{{ order.gRate }}</td>
