added gender field to models; manually configured input forms; a lot working great; removed localflavour and manually put US and Canadian states to the widgets; need to think about Key Market Areas;

--- a/templates/drivers.html
+++ b/templates/drivers.html
@@ -36,7 +36,7 @@
                         <td>{{ driver.mc }}</td>
                         <td>{{ driver.usdot }}</td>
                         <td>{{ driver.phone }}</td>
-                        <td>{{ driver.full_address }}</td>
+                        <td>{{ driver.short_address }}</td>
                         <td>{{ driver.cdl }}</td>
                         <td>{{ driver.gRate}}</td>
                         <td>{{ driver.orders.count }}</td>
