--- a/templates/dash.html
+++ b/templates/dash.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>&gamma; Solutions - Dashboard</title>
+    <title>&gamma;metric TMS</title>
 
     {% load static %}
     <!-- Custom fonts for this template-->
@@ -39,7 +39,7 @@
                 <div class="sidebar-brand-icon rotate-n-15">
                     <i class="fas fa-truck-monster"></i>
                 </div>
-                <div class="sidebar-brand-text mx-3">Gamma Solutions</sup></div>
+                <div class="sidebar-brand-text mx-3">Gamma TMS</sup></div>
             </a>
 
             <!-- Divider -->
