--- a/templates/order-form.html
+++ b/templates/order-form.html
@@ -119,6 +119,14 @@
 				{{ form.g_rate | as_crispy_field }}
             </div>
           </div>
+          <div class="form-row justify-content-end">
+            <div class="form-group col-md-2">
+		  	    {{ form.completed | as_crispy_field }}
+            </div>
+            <div class="form-group col-md-2">
+    		  	{{ form.paid | as_crispy_field }}
+            </div>
+          </div>
 
           <button type="submit" class="btn btn-primary btn-block btn-lg">Submit</button>
         </form>
