--- a/templates/dash.html
+++ b/templates/dash.html
@@ -86,7 +86,7 @@
 
             <!-- Heading -->
             <div class="sidebar-heading">
-                Addons
+                Extra
             </div>
 
             <!-- Nav Item - Pages Collapse Menu -->
@@ -94,18 +94,20 @@
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages"
                     aria-expanded="true" aria-controls="collapsePages">
                     <i class="fas fa-fw fa-folder"></i>
-                    <span>Pages</span>
+                    <span>Tables</span>
                 </a>
                 <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Login Screens:</h6>
-                        <a class="collapse-item" href="login.html">Login</a>
-                        <a class="collapse-item" href="register.html">Register</a>
-                        <a class="collapse-item" href="forgot-password.html">Forgot Password</a>
+                        <h6 class="collapse-header">Tables</h6>
+                        <a class="collapse-item" href="/dash/trucks/">Trucks</a>
+                        <a class="collapse-item" href="/dash/trailers/">Trailers</a>
+                        <a class="collapse-item" href="/dash/documents/">Documents</a>
+                        <!--
                         <div class="collapse-divider"></div>
                         <h6 class="collapse-header">Other Pages:</h6>
                         <a class="collapse-item" href="404.html">404 Page</a>
                         <a class="collapse-item" href="blank.html">Blank Page</a>
+                        -->
                     </div>
                 </div>
             </li>
@@ -366,7 +368,7 @@
             <footer class="sticky-footer bg-white">
                 <div class="container my-auto">
                     <div class="copyright text-center my-auto">
-                        <span>Copyright &copy; Gammametric 2022</span>
+                        <span>Copyright &copy; &gamma;metric 2022</span>
                     </div>
                 </div>
             </footer>
