--- a/templates/driver-form.html
+++ b/templates/driver-form.html
@@ -78,8 +78,10 @@
 				{{ form.emergency_contact_phone | as_crispy_field }}
             </div>
           </div>
-          <div class="form-group">
-		  	{{ form.active | as_crispy_field }}
+          <div class="form-row justify-content-end">
+            <div class="form-group">
+	            {{ form.active | as_crispy_field }}
+            </div>
           </div>
 
           <button type="submit" class="btn btn-primary btn-block btn-lg">Submit</button>
