i dont know; it seems to be working; replaced urls with auto name references; restructured stuff; didnt keep account of all changes; i want to rename the app to tms so maybe some changes will occur

--- a/templates/delete.html
+++ b/templates/delete.html
@@ -12,7 +12,7 @@
       </div>
       <!-- Card Body -->
       <div class="card-body">
-          Are you sure you want to delete {{ object_name}}? You will have to delete all associated orders first.
+          <div class='my-4'> Are you sure you want to delete {{ object_name}}? You will have to delete all associated orders first. </div>
 
         <div class='row justify-content-center'>
         <div>
@@ -22,7 +22,7 @@
           </form>
         </div>
         <div>
-          <a href="/dash/" class='btn btn-secondary mt-2 ml-5'>No, take me back</a>
+          <a href="#" onclick="history.back()" class='btn btn-secondary mt-2 ml-5'>No, take me back</a>
         </div>
        </div>
       </div>
