--- a/templates/driver-form.html
+++ b/templates/driver-form.html
@@ -78,6 +78,11 @@
 				{{ form.emergency_contact_phone | as_crispy_field }}
             </div>
           </div>
+          <div class="form-row">
+            <div class="form-group col-md-5">
+				{{ form.equipment | as_crispy_field }}
+            </div>
+          </div>
           <div class="form-row justify-content-end">
             <div class="form-group">
 	            {{ form.active | as_crispy_field }}
