--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>&gamma; Solutions | &gamma;metric</title>
+        <title>&gamma;metric TMS</title>
     </head>
     <body id="page-top">
 
-        <h1>&gamma; Solutions by &gamma;metric</h1>
+        <h1>&gamma;metric TMS : Manage your fleet</h1>
         <p><a href="/dash">Click here</a> to access the dashboard.</p>
 
 
