--- a/templates/customers.html
+++ b/templates/customers.html
@@ -16,7 +16,7 @@
 <!-- Page Heading -->
 <div class="d-sm-flex align-items-center justify-content-between mb-4">
     <h1 class="h3 mb-0 text-gray-800">Customers</h1>
-    <a href="/dash/customers/new/" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
+    <a href="{% url 'dash-new-customer' %}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
             class="fas fa-plus fa-sm text-white-50"></i> New customer</a>
 </div>
 
@@ -45,7 +45,7 @@
                         <td>{{ customer.full_address }}</td>
                         <td>61</td>
                         <td>
-                            <a class='btn btn-info btn-sm' href="/dash/customers/{{customer.pk}}/">View</a>
+                            <a class='btn btn-info btn-sm' href="{% url 'dash-read-customer' customer.pk %}">View</a>
                         </td>
                     </tr>
                     {% endfor %}
