--- a/templates/dash.html
+++ b/templates/dash.html
@@ -35,7 +35,7 @@
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/dash/">
+            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="{% url 'dash-main' %}">
                 <div class="sidebar-brand-icon rotate-n-15">
                     <i class="fas fa-truck-monster"></i>
                 </div>
@@ -47,7 +47,7 @@
 
             <!-- Nav Item - Dashboard -->
             <li class="nav-item active">
-                <a class="nav-link" href="/dash">
+                <a class="nav-link" href="{% url 'dash-main' %}">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Dashboard</span></a>
             </li>
@@ -61,23 +61,23 @@
             </div>
 
             <li class="nav-item">
-                <a class="nav-link" href="/dash/drivers/">
-                    <i class="fas fa-fw fa-cog"></i>
+                <a class="nav-link" href="{% url 'dash-drivers' %}">
+                    <i class="fas fa-fw fa-user"></i>
                     <span>Drivers</span></a>
                 </a>
             </li>
 
             <!-- Nav Item - Utilities Collapse Menu -->
             <li class="nav-item">
-                <a class="nav-link" href="/dash/customers/">
-                    <i class="fas fa-fw fa-wrench"></i>
+                <a class="nav-link" href="{% url 'dash-customers' %}">
+                    <i class="fas fa-fw fa-users"></i>
                     <span>Customers</span>
                 </a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="/dash/orders/">
-                    <i class="fas fa-fw fa-wrench"></i>
+                <a class="nav-link" href="{% url 'dash-orders' %}">
+                    <i class="fas fa-fw fa-tasks"></i>
                     <span>Orders</span>
                 </a>
             </li>
@@ -88,20 +88,32 @@
             <div class="sidebar-heading">
                 Extra
             </div>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'dash-equipment' %}">
+                    <i class="fas fa-fw fa-trailer"></i>
+                    <span>Equipment</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'dash-documents' %}">
+                    <i class="fas fa-fw fa-file"></i>
+                    <span>Documents</span>
+                </a>
+            </li>
+
 
             <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages"
                     aria-expanded="true" aria-controls="collapsePages">
-                    <i class="fas fa-fw fa-folder"></i>
+                    <i class="fas fa-fw fa-table"></i>
                     <span>Tables</span>
                 </a>
                 <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Tables</h6>
-                        <a class="collapse-item" href="/dash/trucks/">Trucks</a>
-                        <a class="collapse-item" href="/dash/trailers/">Trailers</a>
-                        <a class="collapse-item" href="/dash/documents/">Documents</a>
+                        <a class="collapse-item" href="{% url 'dash-equipment' %}">Equipment</a>
+                        <a class="collapse-item" href="{% url 'dash-documents' %}">Documents</a>
                         <!--
                         <div class="collapse-divider"></div>
                         <h6 class="collapse-header">Other Pages:</h6>
@@ -110,20 +122,6 @@
                         -->
                     </div>
                 </div>
-            </li>
-
-            <!-- Nav Item - Charts -->
-            <li class="nav-item">
-                <a class="nav-link" href="charts.html">
-                    <i class="fas fa-fw fa-chart-area"></i>
-                    <span>Charts</span></a>
-            </li>
-
-            <!-- Nav Item - Tables -->
-            <li class="nav-item">
-                <a class="nav-link" href="tables.html">
-                    <i class="fas fa-fw fa-table"></i>
-                    <span>Tables</span></a>
             </li>
 
             <!-- Divider -->
@@ -136,9 +134,9 @@
 
             <!-- Sidebar Message -->
             <div class="sidebar-card d-none d-lg-flex">
-                <img class="sidebar-card-illustration mb-2" src="img/undraw_rocket.svg" alt="...">
-                <p class="text-center mb-2"><strong>Gamma Solutions</strong> is packed with premium features, components, and more!</p>
-                <a class="btn btn-success btn-sm" href="https://startbootstrap.com/theme/sb-admin-pro">Upgrade to Pro!</a>
+                <img class="sidebar-card-illustration mb-2" src="{% static 'img/undraw_rocket.svg' %}" alt="...">
+                <p class="text-center mb-2"><strong>&gamma;metric TMS</strong> is a great tool for fleet management!</p>
+                <a class="btn btn-success btn-sm" href="https://startbootstrap.com/theme/sb-admin-pro">Donate!</a>
             </div>
 
         </ul>
