--- a/templates/order-form.html
+++ b/templates/order-form.html
@@ -74,10 +74,7 @@
           </div>
           <div class="form-row">
             <div class="form-group col-md-5">
-				{{ form.truck | as_crispy_field }}
-            </div>
-            <div class="form-group col-md-5">
-				{{ form.trailer | as_crispy_field }}
+				{{ form.equipment | as_crispy_field }}
             </div>
             <div class="form-group col-md-2">
 				{{ form.temperature | as_crispy_field }}
